--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 8</title>
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="01-gallery.html">Image gallery</a></li>
-      <li><a href="02-video.html">Video playback</a></li>
-      <li><a href="03-feedback.html">Feedback form</a></li>
-    </ul>
+    <header class="chat-header">
+      <div class="container">
+        <button type="button">Войти</button>
+        <button type="button">Покинуть</button>
+    </div>
+  </header>
+    <div class="container">
+      <div class="wrapper">
+        <div class="message contact">
+          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <p class="message__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
+          </p>
+          <div class="timestamp">
+            10:50
+          </div>
+        </div>
+        <div class="message">
+          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <p class="message__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
+          </p>
+          <div class="timestamp">
+            10:50
+          </div>
+        </div>
+        <div class="message">
+          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <p class="message__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
+          </p>
+          <div class="timestamp">
+            10:50
+          </div>
+        </div>
+        <div class="message">
+          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <p class="message__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
+          </p>
+          <div class="timestamp">
+            10:50
+          </div>
+        </div>
+        <div class="message">
+          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <p class="message__content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
+          </p>
+          <div class="timestamp">
+            10:50
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
