--- a/src/index.html
+++ b/src/index.html
@@ -10,56 +10,71 @@
   <body>
     <header class="chat-header">
       <div class="container">
-        <button type="button">Войти</button>
+        <button type="button" class="js-btn-login">Войти</button>
         <button type="button">Покинуть</button>
-    </div>
-  </header>
+      </div>
+    </header>
     <div class="container">
       <div class="wrapper">
         <div class="message contact">
-          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <img
+            src="https://duckduckgo.com/assets/logo_header.v108.svg"
+            alt=""
+            width="30"
+            height="30"
+          />
           <p class="message__content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
           </p>
-          <div class="timestamp">
-            10:50
-          </div>
+          <div class="timestamp">10:50</div>
         </div>
         <div class="message">
-          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <img
+            src="https://duckduckgo.com/assets/logo_header.v108.svg"
+            alt=""
+            width="30"
+            height="30"
+          />
           <p class="message__content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
           </p>
-          <div class="timestamp">
-            10:50
-          </div>
+          <div class="timestamp">10:50</div>
         </div>
         <div class="message">
-          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <img
+            src="https://duckduckgo.com/assets/logo_header.v108.svg"
+            alt=""
+            width="30"
+            height="30"
+          />
           <p class="message__content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
           </p>
-          <div class="timestamp">
-            10:50
-          </div>
+          <div class="timestamp">10:50</div>
         </div>
         <div class="message">
-          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <img
+            src="https://duckduckgo.com/assets/logo_header.v108.svg"
+            alt=""
+            width="30"
+            height="30"
+          />
           <p class="message__content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
           </p>
-          <div class="timestamp">
-            10:50
-          </div>
+          <div class="timestamp">10:50</div>
         </div>
         <div class="message">
-          <img src="https://duckduckgo.com/assets/logo_header.v108.svg" alt="" width="30" height="30">
+          <img
+            src="https://duckduckgo.com/assets/logo_header.v108.svg"
+            alt=""
+            width="30"
+            height="30"
+          />
           <p class="message__content">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
           </p>
-          <div class="timestamp">
-            10:50
-          </div>
+          <div class="timestamp">10:50</div>
         </div>
       </div>
     </div>
