--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 8</title>
+    <title>chat</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="chat-header">
       <div class="container">
-        <button type="button" class="js-btn-login">Войти</button>
-        <button type="button">Покинуть</button>
+        <button type="button" class="js-btn-login">Увійти</button>
+        <button type="button" class="js-btn-exit" hidden>Вийти</button>
       </div>
     </header>
-    <div class="container">
+    <div class="container js-wrapper" hidden>
       <div class="wrapper">
         <div class="message contact">
           <img
@@ -40,42 +40,10 @@
           </p>
           <div class="timestamp">10:50</div>
         </div>
-        <div class="message">
-          <img
-            src="https://duckduckgo.com/assets/logo_header.v108.svg"
-            alt=""
-            width="30"
-            height="30"
-          />
-          <p class="message__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
-          </p>
-          <div class="timestamp">10:50</div>
-        </div>
-        <div class="message">
-          <img
-            src="https://duckduckgo.com/assets/logo_header.v108.svg"
-            alt=""
-            width="30"
-            height="30"
-          />
-          <p class="message__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
-          </p>
-          <div class="timestamp">10:50</div>
-        </div>
-        <div class="message">
-          <img
-            src="https://duckduckgo.com/assets/logo_header.v108.svg"
-            alt=""
-            width="30"
-            height="30"
-          />
-          <p class="message__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
-          </p>
-          <div class="timestamp">10:50</div>
-        </div>
+      </div>
+      <div class="box">
+        <textarea name="message-area" class="message-area"></textarea>
+        <button class="send-message js-send-message">Надіслати</button>
       </div>
     </div>
     <script src="./index.js" type="module"></script>
