--- a/src/index.html
+++ b/src/index.html
@@ -14,36 +14,11 @@
         <button type="button" class="js-btn-exit" hidden>Вийти</button>
       </div>
     </header>
-    <div class="container js-wrapper" hidden>
-      <div class="wrapper">
-        <div class="message contact">
-          <img
-            src="https://duckduckgo.com/assets/logo_header.v108.svg"
-            alt=""
-            width="30"
-            height="30"
-          />
-          <p class="message__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
-          </p>
-          <div class="timestamp">10:50</div>
-        </div>
-        <div class="message">
-          <img
-            src="https://duckduckgo.com/assets/logo_header.v108.svg"
-            alt=""
-            width="30"
-            height="30"
-          />
-          <p class="message__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, nisi!
-          </p>
-          <div class="timestamp">10:50</div>
-        </div>
-      </div>
+    <div class="container js-container" hidden>
+      <div class="wrapper js-wrapper"></div>
       <div class="box">
-        <textarea name="message-area" class="message-area"></textarea>
-        <button class="send-message js-send-message">Надіслати</button>
+        <textarea name="message-area" class="message-area js-message-area"></textarea>
+        <button class="send-message js-send-message" type="button">Надіслати</button>
       </div>
     </div>
     <script src="./index.js" type="module"></script>
