add storage api

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <div class="container js-container" hidden>
       <div class="wrapper js-wrapper"></div>
       <div class="box">
+        <input type="file" class="file-load js-file-load" />
         <textarea name="message-area" class="message-area js-message-area"></textarea>
         <button class="send-message js-send-message" type="button">Надіслати</button>
       </div>
