--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div class="container js-container" hidden>
       <div class="wrapper js-wrapper"></div>
       <div class="box">
-        <div class="loader-line">
+        <div class="loader-line visually-hidden">
           <div class="inner-loader js-inner-loader"></div>
         </div>
         <label for="loader" class="label"
